dbeaver/dbeaver-ee#1805 Read license text fix